# movielens_recsys_example

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: data_config.py  lgbm_config.py  model_config.py  processing_config.py
examples/: eda_helper_example.ipynb
mlruns/0/: meta.yaml
mlruns/0/034d9963242442838e2dab30d7fe65dc/: meta.yaml
mlruns/0/0a74c065b08842a2b8da983170308904/: meta.yaml
mlruns/0/12bfbedde7574baba6c4edbefe5f436e/: meta.yaml
mlruns/0/169ba245cd5f4c07814307dce0d93e19/: meta.yaml
mlruns/0/1cb8a9cf130141fa8d5e2d52913127ab/: meta.yaml
mlruns/0/1eb3f737bded4bfda3edcb664865b152/: meta.yaml
mlruns/0/3c66fd4e917944ca9f438a3f46453538/: meta.yaml
mlruns/0/3f23d68707f8446d9c9ab842dd40bb0f/: meta.yaml
mlruns/0/4f840cdfee444f34bf1365f6b3a625c4/: meta.yaml
mlruns/396803049963978378/: meta.yaml
notebooks/: 00_process_data_training.ipynb  01_feature_processing_training.ipynb  02_train_model.ipynb  03_evaluate.ipynb  04_process_data inference.ipynb  05_feature_processing_inference.ipynb  06_inference.ipynb
src/data_processing/: movies.py  ratings.py  users.py
src/evaluation/: ranking_evaluator.py
src/feature_processing/: encoders.py  process_features.py
src/models/lgbm/: evaluate.py  inference.py  (+1 more)
src/pipelines/: main_data_processing_inference.py  main_data_processing_training.py  main_feature_processing_inference.py  main_feature_processing_training.py  main_model_evaluation.py  main_model_inference.py  main_model_training.py
src/utils/: eda_helper.py  lgbm_helper.py  utils.py
tests/utils/: test_eda_helper.py
(+270 files in other folders)
