[project]
name = "movielens-recsys-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "protobuf==4.21",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "torchmetrics>=1.7.1",
    "update>=0.0.1",
]
